# appveyor-cppunit-qt

./: .appveyor.yml  CMakeLists.txt  appveyor.cpp  appveyor.h  main.cpp
